force-app/main/default/objects/Trade_Data__c/Trade_Data__c.object-meta.xml
<CustomObject>
    <label>Trade Data</label>
    <nameField>
        <displayFormat>TD-{0000000000}</displayFormat>
        <label>Trade Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>