force-app/main/default/objects/Trade_Data__c/fields/Connection_type__c.field-meta.xml
<CustomField>
    <fullName>Connection_type__c</fullName>
    <label>Connection type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>