force-app/main/default/objects/Trade_Data__c/fields/Exporter__c.field-meta.xml
<CustomField>
    <fullName>Exporter__c</fullName>
    <label>Exporter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>