force-app/main/default/objects/Trade_Data__c/fields/Exporter_Region__c.field-meta.xml
<CustomField>
    <fullName>Exporter_Region__c</fullName>
    <label>Exporter Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>