force-app/main/default/objects/Trade_Data__c/fields/INCOTERMS__c.field-meta.xml
<CustomField>
    <fullName>INCOTERMS__c</fullName>
    <label>INCOTERMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>