force-app/main/default/objects/Trade_Data__c/fields/Interpipe_portfolio__c.field-meta.xml
<CustomField>
    <fullName>Interpipe_portfolio__c</fullName>
    <label>Interpipe portfolio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>