force-app/main/default/objects/Trade_Data__c/fields/OD_mm__c.field-meta.xml
<CustomField>
    <fullName>OD_mm__c</fullName>
    <label>OD, mm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>