force-app/main/default/objects/Trade_Data__c/fields/Price_usd_t__c.field-meta.xml
<CustomField>
    <fullName>Price_usd_t__c</fullName>
    <label>Price, usd/t</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>