force-app/main/default/objects/Trade_Data__c/fields/Product_group__c.field-meta.xml
<CustomField>
    <fullName>Product_group__c</fullName>
    <label>Product group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>