force-app/main/default/objects/Trade_Data__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <inlineHelpText>enter values such as Q1/Q2/Q3/Q4</inlineHelpText>
    <label>Quarter</label>
    <length>2</length>
    <type>Text</type>
</CustomField>