force-app/main/default/objects/Trade_Data__c/fields/Steel_grade__c.field-meta.xml
<CustomField>
    <fullName>Steel_grade__c</fullName>
    <label>Steel grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>