force-app/main/default/objects/Trade_Data__c/fields/Trade_type__c.field-meta.xml
<CustomField>
    <fullName>Trade_type__c</fullName>
    <label>Trade type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>