force-app/main/default/objects/Trade_Data__c/fields/Volume_t__c.field-meta.xml
<CustomField>
    <fullName>Volume_t__c</fullName>
    <label>Volume,t</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>