force-app/main/default/objects/Trade_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Product_group__c</columns>
    <columns>Product__c</columns>
    <columns>Price_usd_t__c</columns>
    <columns>Volume_t__c</columns>
    <columns>Customer__c</columns>
    <columns>Exporter__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>